<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/label_points"
        android:layout_width="74dp"
        android:layout_height="44dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="Total Points"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:gravity="center_vertical"
        android:text="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/label_email"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <TextView
        android:id="@+id/label_address"
        android:layout_width="74dp"
        android:layout_height="44dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="Address"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_sponsor" />

    <TextView
        android:id="@+id/label_sponsor"
        android:layout_width="74dp"
        android:layout_height="44dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="Sponsor"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_email" />

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:gravity="center_vertical"
        android:text="123 Clemson Ave, Clemson SC, 29631"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/label_address"
        app:layout_constraintTop_toBottomOf="@+id/sponsor_name" />

    <EditText
        android:id="@+id/sponsor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:gravity="center_vertical"
        android:text="Amazon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/label_sponsor"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:gravity="center_vertical"
        android:text="testUser@gmail.com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/label_email"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/label_email"
        android:layout_width="74dp"
        android:layout_height="44dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="Email"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:gravity="center_vertical"
        android:text="Test User"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture3" />

    <ImageView
        android:id="@+id/profile_picture3"
        android:layout_width="145dp"
        android:layout_height="118dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/default_profile_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_settings" />

    <Button
        android:id="@+id/button_home"
        android:layout_width="165dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="165dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="46dp"
        android:text="@string/change_account_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_home" />
    <TextView
        android:id="@+id/label_name"
        android:layout_width="74dp"
        android:layout_height="44dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:text="Name"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture3" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:text="@string/button_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/points" />
</androidx.constraintlayout.widget.ConstraintLayout>